fix comments of wrap-at-root

--- a/web/app/styles/_utilities.scss
+++ b/web/app/styles/_utilities.scss
@@ -5,7 +5,7 @@
 // specificity while keeping source code clean and readable. Does not override
 // !important or inline styles; those must be dealt with separately.
 
-@include wrap-at-root(1, "#app") {
+@include wrap-at-root("#app") {
     @import 'utilities/border';
     @import 'utilities/box-shadow';
     @import 'utilities/card';
